--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@popperjs/core": "^2.10.2",
         "bootstrap": "^5.1.3",
         "bootstrap-icons": "^1.7.1",
-        "jquery": "^3.6.0"
+        "jquery": "^3.6.0",
+        "jquery-ui": "^1.13.0"
     }
 }
